--- a/STARTERKIT/scss/_config.scss
+++ b/STARTERKIT/scss/_config.scss
@@ -262,6 +262,11 @@ $u-skiplinks: true;
  */
 $u-pager: false;
 
+/**
+ * CKEditor
+ */
+$u-ckeditor: true;
+
 
 
 /*------------------------------------*\
