--- a/STARTERKIT/scss/components/_pager.scss
+++ b/STARTERKIT/scss/components/_pager.scss
@@ -1,4 +1,4 @@
-@if $u-pager {
+@if $cmp-pager {
 
 /*------------------------------------*\
   PAGER
@@ -17,16 +17,13 @@
 .pager {
   @extend .list--unstyled;
   text-align: center;
-
   a {
     text-decoration: none;
   }
-
   .pager__item {
     display: inline-block;
     margin: 0 0.25em;
   }
-
   .pager__item--current {
     font-weight: $font-a-weight-bold;
   }
