added message scss component, according to #5

--- a/STARTERKIT/scss/_config.scss
+++ b/STARTERKIT/scss/_config.scss
@@ -267,6 +267,11 @@ $cmp-skiplinks: true;
 $cmp-pager: false;
 
 /**
+ * Message
+ */
+$cmp-message: true;
+
+/**
  * CKEditor
  */
 $cmp-ckeditor: true;
