--- a/STARTERKIT/scss/system/_scaffolding.scss
+++ b/STARTERKIT/scss/system/_scaffolding.scss
@@ -30,4 +30,5 @@
 
 @import '../components/skiplinks';
 @import '../components/pager';
+@import '../components/message';
 @import '../components/ckeditor';
