replaced old .list--unstyled utility with .u-list-reset

--- a/STARTERKIT/scss/components/_pager.scss
+++ b/STARTERKIT/scss/components/_pager.scss
@@ -15,7 +15,7 @@
 \*------------------------------------*/
 
 .pager {
-  @extend .list--unstyled;
+  @extend .u-list-reset;
   text-align: center;
   a {
     text-decoration: none;
