--- a/STARTERKIT/scss/system/_scaffolding.scss
+++ b/STARTERKIT/scss/system/_scaffolding.scss
@@ -33,3 +33,4 @@
 @import '../components/pager';
 @import '../components/message';
 @import '../components/ckeditor';
+@import '../components/menu';
