added theme function for tabs and basic tabs styling with _tabs.scss component, according to #5

--- a/STARTERKIT/scss/_config.scss
+++ b/STARTERKIT/scss/_config.scss
@@ -276,6 +276,11 @@ $cmp-message: true;
  */
 $cmp-ckeditor: true;
 
+/**
+ * Tabs
+ */
+$cmp-tabs: true;
+
 
 
 /*------------------------------------*\
